Fixed spacing issue inside code mirror

--- a/src/styles/text-box.scss
+++ b/src/styles/text-box.scss
@@ -42,6 +42,9 @@
       padding: 4px 16px;
     }
   }
+  .CodeMirror-gutter{
+    margin-right: 6px;
+  }
   .CodeMirror{
     padding-top: 20px;
     z-index: 100;
@@ -52,11 +55,5 @@
     color: $medium-emphasis;
     font-size: 15px;
     background-color: inherit;
-    outline: none;
-    border: none;
-    resize: none;
-    span{
-      margin-left: 8px;
-    }
   }
 }
